@@ -54,6 +54,12 @@ public:
 
     virtual void SetRows(int nRows);
 
+#if wxABI_VERSION >= 20802
+    // TODO: In 2.9 these should probably be virtual, and declared in the base class...
+    void SetToolNormalBitmap(int id, const wxBitmap& bitmap);
+    void SetToolDisabledBitmap(int id, const wxBitmap& bitmap);
+#endif
+    
     // implementation only from now on
     // -------------------------------
 
